--- a/index.html
+++ b/index.html
@@ -8,34 +8,50 @@
 </head>
 <body>
     <header>
-        <h1>Unsere Leitungsebene</h1>
-        <p>Lernen Sie die Führungskräfte unseres Unternehmens kennen!</p>
+        <h1>Majestic rp Leitung</h1>
     </header>
     
     <main>
         <section class="leitungsebene">
             <div class="staff-member">
-                <h2>Max Mustermann</h2>
-                <p>Rang: Geschäftsführer</p>
-                <p>Discord: test</p>
+                <h2>Krea</h2>
+                <p>Rang: Inhaber</p>
+                <p>Discord: _kreativmodus</p>
             </div>
 
             <div class="staff-member">
-                <h2>Julia Musterfrau</h2>
-                <p>Rang: Marketing Managerin</p>
-                <p>Discord: Julia Musterfrau#5678</p>
+                <h2>Jay</h2>
+                <p>Rang: Stv. Inhaber</p>
+                <p>Discord: iixinduck</p>
             </div>
 
             <div class="staff-member">
-                <h2>Paul Beispiel</h2>
-                <p>Rang: IT-Spezialist</p>
-                <p>Discord: Paul Beispiel#9101</p>
+                <h2>charliee</h2>
+                <p>Rang: Stv. Inhaber</p>
+                <p>Discord: charliee20.</p>
+            </div>
+
+            <div class="staff-member">
+                <h2>fynn</h2>
+                <p>Rang: Management</p>
+                <p>Discord: fynnlukah</p>
+            </div>
+
+            <div class="staff-member">
+                <h2>David</h2>
+                <p>Rang: Management</p>
+                <p>Discord: david1234123__</p>
+            </div>
+
+            <div class="staff-member">
+                <h2>Trex</h2>
+                <p>Rang: Management</p>
+                <p>Discord: megamechyt</p>
             </div>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2024 Unsere Firma. Alle Rechte vorbehalten.</p>
     </footer>
 </body>
 </html>
