--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
             </div>
         </section>
     </main>
-
     <footer>
+        <h2>Diese website wurde von fynnlukah gemacht.</h2>
     </footer>
 </body>
 </html>
