--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Unsere Leitungsebene</title>
+    <title>Majestic rp Leitung</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Majestic rp Leitung</h1>
+        <h1>Majestic rp Leitungsebene</h1>
     </header>
     
     <main>
