--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </section>
     </main>
     <footer>
-        <h2>Diese website wurde von fynnlukah gemacht.</h2>
+        <p>Diese website wurde von fynnlukah gemacht.</p>
     </footer>
 </body>
 </html>
