--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@
                 <p>Rang: Management</p>
                 <p>Discord: megamechyt</p>
             </div>
+
+            <div class="staff-member">
+                <h2>leif</h2>
+                <p>Rang: Management</p>
+                <p>Discord: leif_12678</p>
+            </div>
         </section>
     </main>
     <footer>
