--- a/bewerbung.html
+++ b/bewerbung.html
@@ -9,7 +9,6 @@
 <body>
     <header>
         <h1>Bewerbungsinformationen</h1>
-        <p>Interessiert an einer Karriere bei uns? Hier findest du alle wichtigen Informationen zur Bewerbung!</p>
     </header>
     
     <main>
@@ -17,32 +16,16 @@
             <h2>Wie bewerbe ich mich?</h2>
             <p>Um sich bei uns zu bewerben, folgen Sie bitte diesen einfachen Schritten:</p>
             <ol>
-                <li>Bereiten Sie Ihre Bewerbungsunterlagen vor (Lebenslauf, Anschreiben, Zeugnisse).</li>
-                <li>Senden Sie Ihre Bewerbung per E-Mail an: <strong>karriere@unserefirma.com</strong>.</li>
-                <li>Im Betreff der E-Mail geben Sie bitte die Position an, für die Sie sich bewerben.</li>
-                <li>Warten Sie auf eine Rückmeldung von unserem HR-Team, das sich innerhalb von 7 Werktagen bei Ihnen melden wird.</li>
+                <li>Gehen sie zu #bewerbungen</li>
+                <li>Drücken sie dort supporter beim dropdown menü</li>
+                <li>In den dms mit dem bots auf den fragen antworten</li>
+                <li>Warten bis ihre ergebnisse kommen.</li>
             </ol>
-
-            <h2>Welche Unterlagen werden benötigt?</h2>
-            <ul>
-                <li>Aktueller Lebenslauf (mit Foto, falls gewünscht)</li>
-                <li>Anschreiben (max. 1 Seite)</li>
-                <li>Relevante Zeugnisse (Arbeitszeugnisse, Zertifikate, Diplome)</li>
-            </ul>
-
-            <h2>Kontakt für Fragen</h2>
-            <p>Falls Sie Fragen zum Bewerbungsprozess haben, können Sie uns jederzeit unter <strong>hr@unserefirma.com</strong> erreichen.</p>
-
-            <h2>Offene Stellen</h2>
-            <p>Eine Liste unserer offenen Stellen finden Sie auf unserer <a href="karriere.html">Karriereseite</a>.</p>
-
-            <h2>Bewerbungsfristen</h2>
-            <p>Unsere offenen Stellen haben in der Regel keine festen Bewerbungsfristen. Bewerbungen werden angenommen, solange die Stellen verfügbar sind.</p>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2024 Unsere Firma. Alle Rechte vorbehalten.</p>
+        <p>website erstellt von fynnlukah</p>
     </footer>
 </body>
 </html>
