--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 </head>
 <body>
     <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Startseite</a></li>
+                <li><a href="leitung.html">Leitungsebene</a></li>
+                <li><a href="bewerbung.html">Bewerbung</a></li>
+            </ul>
+        </nav>
         <h1>Majestic rp Leitungsebene</h1>
     </header>
     
@@ -57,7 +64,7 @@
         </section>
     </main>
     <footer>
-        <p>Diese website wurde von fynnlukah gemacht.</p>
+        <p>Diese Website wurde von fynnlukah gemacht.</p>
     </footer>
 </body>
 </html>
