--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     <header>
+        <nav>
+            <ul>
+                <li><a href="bewerbung.html">Bewerbung</a></li>
+            </ul>
+        </nav>
         <h1>Majestic rp Leitungsebene</h1>
     </header>
     
@@ -56,6 +61,7 @@
             </div>
         </section>
     </main>
+    
     <footer>
         <p>Diese Website wurde von fynnlukah gemacht.</p>
     </footer>
