--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
 </head>
 <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="bewerbung.html">Bewerbung</a></li>
-            </ul>
-        </nav>
-        <h1>Majestic rp Leitungsebene</h1>
+        <div class="header-container">
+            <h1>Majestic rp Leitungsebene</h1>
+            <nav>
+                <ul>
+                    <li><a href="bewerbung.html">Bewerbung</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     
     <main>
