--- a/bewerbung.html
+++ b/bewerbung.html
@@ -8,8 +8,14 @@
 </head>
 <body>
     <header>
-        <h1>Bewerbungsinformationen</h1>
-        <p>Interessiert an einer Karriere bei uns? Hier findest du alle wichtigen Informationen zur Bewerbung!</p>
+        <div class="header-container">
+            <h1>Bewerbungsinformationen</h1>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Leitungsebene</a></li>
+                </ul>
+            </nav>
+        </div>    
     </header>
     
     <main>
@@ -17,16 +23,16 @@
             <h2>Wie bewerbe ich mich?</h2>
             <p>Um sich bei uns zu bewerben, folgen Sie bitte diesen einfachen Schritten:</p>
             <ol>
-                <li>Gehen sie zum bewerbungschannel</li>
-                <li>Drücken sie "support" im drop-down menü</li>
-                <li>Die fragen in den dms bei dem bot antworten</li>
-                <li>Nun müssen sie warten, bis sie ne antwort von der leitungsebene bekommen.</li>
+                <li>Gehen sie zum Bewerbungschannel</li>
+                <li>Drücken sie "support" im Drop-Down-Menü</li>
+                <li>Die Fragen in den DMs bei dem Bot beantworten</li>
+                <li>Nun müssen sie warten, bis sie eine Antwort von der Leitungsebene bekommen.</li>
             </ol>
         </section>
     </main>
 
     <footer>
-        <p>Diese website wurde erstellt von fynnlukah</p>
+        <p>Diese Website wurde erstellt von fynnlukah</p>
     </footer>
 </body>
 </html>
