--- a/bewerbung.html
+++ b/bewerbung.html
@@ -15,18 +15,18 @@
                     <li><a href="index.html">Leitungsebene</a></li>
                 </ul>
             </nav>
-        </div>    
+        </div>
     </header>
-    
+
     <main>
         <section class="bewerbung-info">
             <h2>Wie bewerbe ich mich?</h2>
             <p>Um sich bei uns zu bewerben, folgen Sie bitte diesen einfachen Schritten:</p>
             <ol>
-                <li>Gehen sie zum Bewerbungschannel</li>
-                <li>Drücken sie "support" im Drop-Down-Menü</li>
-                <li>Die Fragen in den DMs bei dem Bot beantworten</li>
-                <li>Nun müssen sie warten, bis sie eine Antwort von der Leitungsebene bekommen.</li>
+                <li>Gehen Sie zum Bewerbungschannel</li>
+                <li>Drücken Sie "support" im Drop-Down-Menü</li>
+                <li>Die Fragen in den DMs beim Bot beantworten</li>
+                <li>Nun müssen Sie warten, bis Sie eine Antwort von der Leitungsebene bekommen.</li>
             </ol>
         </section>
     </main>
