--- a/index.html
+++ b/index.html
@@ -61,6 +61,24 @@
                 <p>Rang: Management</p>
                 <p>Discord: leif_12678</p>
             </div>
+
+            <div class="staff-member">
+                <h2>Steven</h2>
+                <p>Rang: Management</p>
+                <p>Discord: steven_237</p>
+            </div>
+
+            <div class="staff-member">
+                <h2>Cookie</h2>
+                <p>Rang: Teamverwaltung</p>
+                <p>Discord: cookiecream_262</p>
+            </div>
+
+            <div class="staff-member">
+                <h2>laserhype</h2>
+                <p>Rang: Teamverwaltung</p>
+                <p>Discord: binneu_1</p>
+            </div>
         </section>
     </main>
     
