--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <h1>Majestic rp Leitungsebene</h1>
             <nav>
                 <ul>
-                    <li><a href="bewerbung.html">Bewerbung</a></li>
+                    <li><a href="bewerbung">Bewerbung</a></li>
                 </ul>
             </nav>
         </div>
