--- a/bewerbung.html
+++ b/bewerbung.html
@@ -12,7 +12,7 @@
             <h1>Bewerbungsinformationen</h1>
             <nav>
                 <ul>
-                    <li><a href="index.html">Leitungsebene</a></li>
+                    <li><a href="./">Leitungsebene</a></li>
                 </ul>
             </nav>
         </div>
