--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
             <div class="staff-member">
                 <h2>fynn</h2>
-                <p>Rang: Management</p>
+                <p>Rang: Stv. Inhaber</p>
                 <p>Discord: fynnlukah</p>
             </div>
 
